row feature items

--- a/index.html
+++ b/index.html
@@ -18,7 +18,69 @@
     <div class="sidebar">Sidebar</div>
     <header class="header">Header</header>
     <div class="realtors">Top 3 Realtors</div>
-    <section class="features">Features</section>
+    <section class="features">
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-global"></use>
+        </svg>
+        <h4 class="heading-4">World's best luxury homes</h4>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nostrum
+          vitae dolores fugit commodi cumque.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-trophy"></use>
+        </svg>
+        <h4 class="heading-4">Only the best properties</h4>
+        <p>
+          quasi iste corrupti eos modi voluptate impedit cum veroiste corrupti
+          eos modi ratione?
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+        </svg>
+        <h4 class="heading-4">All homes in top locations</h4>
+        <p>
+          Quos consequatur consequuntur molestias, neque, praesentium
+          perferendis quae dolorem voluptatibus dolores in quaerat eligendi quis
+          error possimus a quidem sequi.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-key"></use>
+        </svg>
+        <h4 class="heading-4">New home in one week</h4>
+        <p>
+          eaque inventore repudiandae! Ab quidem praesentium nulla ducimus eos
+          eveniet a, aliquid expedita itaque! Et, iure optio?
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-presentation"></use>
+        </svg>
+        <h4 class="heading-4">Top 1% realtors</h4>
+        <p>
+          ipsa quasi, nesciunt iure minima. Neque ut facere animi delectus
+          maiores ipsam perferendis quasi ullam nisi?
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-lock"></use>
+        </svg>
+        <h4 class="heading-4">Secure payments on nexter</h4>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nostrum
+          vitae dolores fugit commodi cumque.
+        </p>
+      </div>
+    </section>
     <div class="story__pictures">story pictures</div>
     <div class="story__content">story content</div>
     <section class="homes">Homes</section>
