--- a/index.html
+++ b/index.html
@@ -23,28 +23,30 @@
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-global"></use>
         </svg>
-        <h4 class="heading-4">World's best luxury homes</h4>
-        <p>
+        <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
+        <p class="feature__text">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nostrum
-          vitae dolores fugit commodi cumque.
+          vitae dolores fugit commodi cumque.maiores ipsam perferendis quasi
+          ullam nisi?ipsum dolor, sit amet
         </p>
       </div>
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-trophy"></use>
         </svg>
-        <h4 class="heading-4">Only the best properties</h4>
-        <p>
-          quasi iste corrupti eos modi voluptate impedit cum veroiste corrupti
-          eos modi ratione?
+        <h4 class="heading-4 heading-4--dark">Only the best propertie</h4>
+        <p class="feature__text">
+          Quos consequatur consequuntur molestias, neque, praesentium
+          perferendis quae dolorem voluptatibus dolores in quaerat eligendi quis
+          error possimus a quidem sequi.
         </p>
       </div>
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-map-pin"></use>
         </svg>
-        <h4 class="heading-4">All homes in top locations</h4>
-        <p>
+        <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
+        <p class="feature__text">
           Quos consequatur consequuntur molestias, neque, praesentium
           perferendis quae dolorem voluptatibus dolores in quaerat eligendi quis
           error possimus a quidem sequi.
@@ -54,8 +56,8 @@
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-key"></use>
         </svg>
-        <h4 class="heading-4">New home in one week</h4>
-        <p>
+        <h4 class="heading-4 heading-4--dark">New home in one week</h4>
+        <p class="feature__text">
           eaque inventore repudiandae! Ab quidem praesentium nulla ducimus eos
           eveniet a, aliquid expedita itaque! Et, iure optio?
         </p>
@@ -65,7 +67,7 @@
           <use xlink:href="img/sprite.svg#icon-presentation"></use>
         </svg>
         <h4 class="heading-4">Top 1% realtors</h4>
-        <p>
+        <p class="feature__text">
           ipsa quasi, nesciunt iure minima. Neque ut facere animi delectus
           maiores ipsam perferendis quasi ullam nisi?
         </p>
@@ -75,14 +77,30 @@
           <use xlink:href="img/sprite.svg#icon-lock"></use>
         </svg>
         <h4 class="heading-4">Secure payments on nexter</h4>
-        <p>
+        <p class="feature__text">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nostrum
           vitae dolores fugit commodi cumque.
         </p>
       </div>
     </section>
-    <div class="story__pictures">story pictures</div>
-    <div class="story__content">story content</div>
+    <div class="story__pictures">
+      <img src="img/story-1.jpeg" alt="story-1" class="story__img--1" />
+      <img src="img/story-2.jpeg" alt="story-2" class="story__img--2" />
+    </div>
+    <div class="story__content">
+      <h3 class="heading-3 mb-2">Happy Customers</h3>
+      <h2 class="heading-2 heading-2--dark mb-4">
+        &ldquo;The best decision of our lives&rdquo;
+      </h2>
+      <p class="story__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+        dignissimos accusamus aliquam, cumque vitae recusandae esse dolore!
+        Numquam, dolorem iure modi quos ipsam nemo sapiente provident pariatur
+        omnis vitae amet?
+      </p>
+
+      <button class="btn">Find your own home</button>
+    </div>
     <section class="homes">Homes</section>
     <section class="gallery">Gallery</section>
     <footer class="footer">Footer</footer>
