--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </svg>
           <p>$1,200,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-2.jpeg" alt="house-2" class="home__img" />
@@ -164,7 +164,7 @@
           </svg>
           <p>$2,750,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-3.jpeg" alt="house-3" class="home__img" />
@@ -196,7 +196,7 @@
           </svg>
           <p>$800,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-4.jpeg" alt="house-4" class="home__img" />
@@ -228,7 +228,7 @@
           </svg>
           <p>$1,950,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-5.jpeg" alt="house-5" class="home__img" />
@@ -260,7 +260,7 @@
           </svg>
           <p>$9,500,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-6.jpeg" alt="house-6" class="home__img" />
@@ -292,10 +292,86 @@
           </svg>
           <p>$600,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
     </section>
-    <section class="gallery">Gallery</section>
-    <footer class="footer">Footer</footer>
+
+    <section class="gallery">
+      <figure class="gallery__item gallery__item--1">
+        <img src="img/gal-1.jpeg" alt="img 1" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--2">
+        <img src="img/gal-2.jpeg" alt="img 2" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--3">
+        <img src="img/gal-3.jpeg" alt="img 3" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--4">
+        <img src="img/gal-4.jpeg" alt="img 4" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--5">
+        <img src="img/gal-5.jpeg" alt="img 5" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--6">
+        <img src="img/gal-6.jpeg" alt="img 6" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--7">
+        <img src="img/gal-7.jpeg" alt="img 7" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--8">
+        <img src="img/gal-8.jpeg" alt="img 8" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--9">
+        <img src="img/gal-9.jpeg" alt="img 9" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--10">
+        <img src="img/gal-10.jpeg" alt="img 10" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--11">
+        <img src="img/gal-11.jpeg" alt="img 11" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--12">
+        <img src="img/gal-12.jpeg" alt="img 12" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--13">
+        <img src="img/gal-13.jpeg" alt="img 13" class="gallery__img" />
+      </figure>
+
+      <figure class="gallery__item gallery__item--14">
+        <img src="img/gal-14.jpeg" alt="img 14" class="gallery__img" />
+      </figure>
+    </section>
+    <footer class="footer">
+      <nav class="nav">
+        <li class="nav__item">
+          <a href="#" class="nav__link">Find Your Dream Home</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Request proposal</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Download home planner</a>
+        </li>
+        <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Submit your property</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Come work with us</a>
+        </li>
+      </nav>
+    </footer>
   </body>
 </html>
