--- a/index.html
+++ b/index.html
@@ -354,13 +354,11 @@
       </figure>
     </section>
     <footer class="footer">
-      <nav class="nav">
+      <ul class="nav">
         <li class="nav__item">
           <a href="#" class="nav__link">Find Your Dream Home</a>
         </li>
-        <li class="nav__item">
-          <a href="#" class="nav__link">Request proposal</a>
-        </li>
+
         <li class="nav__item">
           <a href="#" class="nav__link">Download home planner</a>
         </li>
@@ -371,7 +369,12 @@
         <li class="nav__item">
           <a href="#" class="nav__link">Come work with us</a>
         </li>
-      </nav>
+      </ul>
+
+      <p class="copyright">
+        &copy; Copyright 2020 by Mhmod Tayel. Feel free to use this this project
+        for your own purposes.
+      </p>
     </footer>
   </body>
 </html>
