--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
     <div class="sidebar">
       <button class="nav-btn"></button>
     </div>
-    <header class="header">Header</header>
+    <header class="header">
+      <img src="img/logo.png" alt="logo" class="header__logo" />
+      <h3 class="heading-3">Your Own Home:</h3>
+      <h1 class="heading-1">The ultimate personal freedom</h1>
+      <button class="btn">View our properties</button>
+      <div class="header__seenon-text">Seen On</div>
+      <div class="header__seenon-logos">
+        <img src="img/logo-bbc.png" alt="bbc" />
+        <img src="img/logo-forbes.png" alt="forbes" />
+        <img src="img/logo-techcrunch.png" alt="tech" />
+        <img src="img/logo-bi.png" alt="bi" />
+      </div>
+    </header>
     <div class="realtors">Top 3 Realtors</div>
     <section class="features">
       <div class="feature">
