--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <img src="img/logo.png" alt="logo" class="header__logo" />
       <h3 class="heading-3">Your Own Home:</h3>
       <h1 class="heading-1">The ultimate personal freedom</h1>
-      <button class="btn">View our properties</button>
-      <div class="header__seenon-text">Seen On</div>
+      <button class="btn header__btn">View our properties</button>
+      <div class="header__seenon-text">As seen On</div>
       <div class="header__seenon-logos">
         <img src="img/logo-bbc.png" alt="bbc" />
         <img src="img/logo-forbes.png" alt="forbes" />
