all done without responsivness

--- a/index.html
+++ b/index.html
@@ -31,7 +31,30 @@
         <img src="img/logo-bi.png" alt="bi" />
       </div>
     </header>
-    <div class="realtors">Top 3 Realtors</div>
+    <div class="realtors">
+      <h3 class="heading-3 realtor__heading">Top 3 Realtors</h3>
+      <figure class="realtor">
+        <img src="img/realtor-1.jpeg" class="realtor__img" alt="realtor 1" />
+        <div class="realtor__text">
+          <h4 class="heading-4">Erik Feinman</h4>
+          <p>245 House Sold</p>
+        </div>
+      </figure>
+      <figure class="realtor">
+        <img src="img/realtor-2.jpeg" class="realtor__img" alt="realtor 2" />
+        <div class="realtor__text">
+          <h4 class="heading-4">Kim Brown</h4>
+          <p>212 House Sold</p>
+        </div>
+      </figure>
+      <figure class="realtor">
+        <img src="img/realtor-3.jpeg" class="realtor__img" alt="realtor 3" />
+        <div class="realtor__text">
+          <h4 class="heading-4">Toby Ramsey</h4>
+          <p>198 House Sold</p>
+        </div>
+      </figure>
+    </div>
     <section class="features">
       <div class="feature">
         <svg class="feature__icon">
