--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <figure class="realtor">
         <img src="img/realtor-2.jpeg" class="realtor__img" alt="realtor 2" />
         <div class="realtor__text">
-          <h4 class="heading-4">Kim Brown</h4>
+          <h4 class="heading-4">Sara malkov</h4>
           <p>212 House Sold</p>
         </div>
       </figure>
